styles/components/_map.scss
#map {
  display: flex;
  position: relative;
  flex-wrap: wrap;
  height: 85vh;
}

.p-menubar,
.p-menu {
  border-radius: 0px;
  border-bottom-right-radius: 2px;
}

.p-sidebar,
.p-sidebar-content {
  padding: 0;
}

#canvas-container {
  width: 100% !important;
  height: 100% !important;
}

#transform-toolbar {
  position: absolute;
  top: 72px;
  left: 24px;
  display: flex;
  flex-direction: column;
  button {
    background-color: #ffffff;
    height: 32px;
    width: 32px;
    border: 0px;
    padding: 5px 8px;
    outline: none;
    cursor: pointer;
    img {
      width: 16px;
    }
    &:hover {
      background-color: #e0e0e0;
    }
    &.selected {
      background-color: #0087fd;

      &:hover {
        background-color: #0087fd;
      }
    }
  }
}
#property-container {
  position: relative;

  h5 {
    padding-left: 0.5rem;
    padding-top: 0.5rem;
  }
  #scene-info-container {
    padding: 0.25rem 1.25rem;
  }
  .p-panel {
    position: absolute;
    right: 0;
    border-bottom-right-radius: 0px;
    border-bottom-left-radius: 2px;
  }
  .p-panel-content {
    padding: 0.2rem;
    border-bottom-right-radius: 0px;
    border-bottom-left-radius: 2px;
  }
  .p-tabview-panels {
    padding: 0;
  }
  .p-accordion-header-link {
    border: none;
    background: #ffffff;
    // padding-top: 0;
  }
  .p-accordion-content {
    border: none;
    padding: 0 1.25rem;
    .accordion-item {
      display: flex;
      justify-content: space-between;
      align-items: center;
      padding-bottom: 0.15rem;
    }
  }
  .move-button__goal {
    margin-top: 0.5rem;
  }
  a {
    color: #4f5a68;
  }

  .button-container {
    width: 100%;
    .p-button {
      margin: 0.25rem;
    }
  }
}
#robot-info__container {
  position: absolute;
  color: #ffffff;
  top: 80%;
  left: 5%;
}

#switch-container {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  .p {
    margin: 1px 0 !important;
  }
  div {
    margin-left: 5px;
    margin-right: 3px;
  }
}

.p-card-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.p-speeddial-item {
  .pi-map,
  .pi-download,
  .pi-flag,
  .pi-compass {
    color: #ffffff;
  }
}

